--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+    <svg class="d-none">
       <symbol
         id="aperture"
         fill="none"
@@ -40,6 +40,7 @@
           d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"
         ></path>
       </symbol>
+
       <symbol id="cart" viewBox="0 0 16 16">
         <path
           d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
@@ -241,7 +242,6 @@
             ></path>
           </svg>
           <small class="d-block mb-3 text-body-secondary">© 2024–2025</small>
-        </div>
         <div class="col-6 col-md">
           <ul class="list-unstyled text-small">
             <li>
@@ -261,6 +261,7 @@
             </li>
           </ul>
         </div>
+      </div>
 
         <div class="col-6 col-md">
           <h5>Información</h5>
@@ -288,12 +289,12 @@
         <div class="col-6 col-md">
           <ul class="list-unstyled text-small">
             <li>
-              <a class="link-secondary text-decoration-none" href="#"
+              <a class="link-secondary text-decoration-none" href="https://portal.edu.gva.es/ieslluissimarro/tecnic-superior-en-desenvolupament-daplicacions-web/"
                 >IES LLuís Simarro Lacabra</a
               >
             </li>
             <li>
-              <a class="link-secondary text-decoration-none" href="#"
+              <a class="link-secondary text-decoration-none" 
                 >1er DAW</a
               >
             </li>
