--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </style>
   </head>
   <body>
+    <header>
     <svg class="d-none">
       <symbol
         id="aperture"
@@ -53,11 +54,7 @@
         ></path>
       </symbol>
     </svg>
-    <main>
-      <div
-        id="caixa_imatge"
-        class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary"
-      >
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
         <div class="col-md-6 p-lg-5 mx-auto my-5">
           <!--<h1 class="display-3 fw-bold">Designed for engineers</h1>
       <h3 class="fw-normal text-muted mb-3">Build anything you want with Aperture</h3>-->
@@ -144,6 +141,8 @@
           </div>
         </div>
       </nav>
+    </header>
+      <main>
       <div class="px-4 py-5 my-5 text-center">
         <h1 class="display-5 fw-bold text-body-emphasis">
           Estado de tu economía.
@@ -207,7 +206,7 @@
           class="bg-body-tertiary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden"
         >
           <div class="my-3 p-3">
-            <h2 class="display-5">Estado</h2>
+            <h2 class="display-5 fw-bold text-body-emphasis">Estado</h2>
           </div>
           <div
             class="bg-body shadow-sm mx-auto"
@@ -221,7 +220,7 @@
 
     <footer class="container py-5">
       <div class="row">
-        <div class="col-12 col-md">
+        <div class="col-6 col-md">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
