--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       >
         <div class="col-md-6 p-lg-5 mx-auto my-5">
           <!--<div class="d-flex gap-3 justify-content-center lead fw-normal">-->
-          <img src="./SpendSmart.png" class="img-fluid" alt="SpendSmart imagen" />
+          <img src="./imatges/SpendSmart.png" class="img-fluid" alt="SpendSmart imagen" />
           <!--</div>-->
         </div>
         <!-- <div class="product-device shadow-sm d-none d-md-block"></div>
